1st screen added

--- a/style.css
+++ b/style.css
@@ -1,15 +1,40 @@
-body{
+body {
     font-family: Roboto;
 }
 
-.header{
+.header {}
+
+.heading {
     font-style: normal;
-font-weight: 900;
-font-size: 20px;
-line-height: 23px;
-text-align: center;
+    font-weight: 900;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: #2F3132;
+}
 
-/* graphite */
+.text {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    color: #2F3132;
+}
 
-color: #2F3132;
+.top {
+    background: #E0E1E2;
+    padding-top: 25px;
+    padding-bottom: 48px;
+}
+.top__arrow {
+    margin-top: 40px;
+}
+.top__img{
+    margin-top: 94px;
+    margin-bottom: 41px;
+    height: 230px;
+    background-image: url(img/MX-Master\ 1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
